--- a/index.html
+++ b/index.html
@@ -1,5 +1,21 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <title>web</title>
+    </head>
+    <body>
+        <h1>Aditya's Portfolio</h1>
+        <h2>I am a Web-Devloper</h2>
+        <hr>
+        <a href="./public/movie-ranking.html">Movie ranking project</a><img src="./assets/images/movie ranking.png" alt="movie ranking">
+        <a href="./public/birthday-invite.html">Birthday Invite Project</a><img src="./assets/images/birthday.png" alt="birthday invite">
+        <a href="./public/about.html">About me</a>
+        <a href="./public/contact.html">Contact me</a>
+    </body>
+</html>
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
